--- a/css/style.css
+++ b/css/style.css
@@ -35,3 +35,39 @@ li {
     text-overflow: ellipsis;
     white-space: nowrap;
 }
+
+.container {
+    height: 100px;
+    width: 100px;
+    background: #8ed9e5;
+    border: 3px solid aliceblue;
+    margin: 50px;
+}
+
+.inner {
+    background-color: saddlebrown;
+    height: 100%;
+    width: 100%;
+}
+
+.inner:hover {
+    transform: scale(1.1);
+    transform: rotate(30deg);
+}
+
+.chakum_chukum {
+    width: 300px;
+    height: 300px;
+    background-color: sandybrown;
+    border: 1px solid greenyellow;
+    transition: width 3s ease-in-out, height 3s ease-in-out;
+}
+
+.chakum_chukum:hover {
+    width: 600px;
+    height: 500px;
+}
+
+@keyframes rakibthpi {
+    0% {}
+}
